tests/tests/ui/not_valuable.stderr
error[E0277]: the trait bound `S: Valuable` is not satisfied
 --> tests/ui/not_valuable.rs:7:8
  |
5 | #[derive(Valuable)]
  |          -------- required by a bound introduced by this call
6 | struct Struct {
7 |     f: Option<S>,
  |        ^^^^^^^^^ the trait `Valuable` is not implemented for `S`, which is required by `Option<S>: Valuable`
  |
  = help: the following other types implement trait `Valuable`:
            &T
            &[T]
            &mut T
            &str
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
          and $N others
  = note: required for `Option<S>` to implement `Valuable`

error[E0277]: the trait bound `S: Valuable` is not satisfied
  --> tests/ui/not_valuable.rs:11:14
   |
10 | #[derive(Valuable)]
   |          -------- required by a bound introduced by this call
11 | struct Tuple(Option<S>);
   |              ^^^^^^^^^ the trait `Valuable` is not implemented for `S`, which is required by `Option<S>: Valuable`
   |
   = help: the following other types implement trait `Valuable`:
             &T
             &[T]
             &mut T
             &str
             ()
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
           and $N others
   = note: required for `Option<S>` to implement `Valuable`

error[E0277]: the trait bound `S: Valuable` is not satisfied
  --> tests/ui/not_valuable.rs:15:25
   |
13 | #[derive(Valuable)]
   |          -------- required by a bound introduced by this call
14 | enum Enum {
15 |     Struct { f: Option<S> },
   |                         ^ the trait `Valuable` is not implemented for `S`, which is required by `&Option<S>: Valuable`
   |
   = help: the following other types implement trait `Valuable`:
             &T
             &[T]
             &mut T
             &str
             ()
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
           and $N others
   = note: required for `Option<S>` to implement `Valuable`
   = note: 1 redundant requirement hidden
   = note: required for `&Option<S>` to implement `Valuable`

error[E0277]: the trait bound `S: Valuable` is not satisfied
  --> tests/ui/not_valuable.rs:16:19
   |
13 | #[derive(Valuable)]
   |          -------- required by a bound introduced by this call
...
16 |     Tuple(Option<S>),
   |                   ^ the trait `Valuable` is not implemented for `S`, which is required by `&Option<S>: Valuable`
   |
   = help: the following other types implement trait `Valuable`:
             &T
             &[T]
             &mut T
             &str
             ()
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
           and $N others
   = note: required for `Option<S>` to implement `Valuable`
   = note: 1 redundant requirement hidden
   = note: required for `&Option<S>` to implement `Valuable`
